// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JoinPage render renders aws logo when signup from aws 1`] = `
<div>
  <Script
    attributes={Object {}}
    onCreate={[Function]}
    onError={[Function]}
    onLoad={[Function]}
    url="https://www.google.com/recaptcha/api.js"
  />
  <CenteredLogo
    showAwsLogo={true}
  />
  <Panel
    accent={true}
    title="Sign Up"
  >
    <Panel.Section>
      <Connect(ReduxForm)
        onSubmit={[Function]}
      />
    </Panel.Section>
  </Panel>
  <Panel.Footer
    left={
      <small>
        Already have an account? 
        <UnstyledLink
          Component={[Function]}
          to="/auth"
        >
          Log In
        </UnstyledLink>
        .
      </small>
    }
    right={
      <JoinLink
        location={
          Object {
            "pathname": "/join",
          }
        }
      />
    }
  />
</div>
`;

exports[`JoinPage render renders correctly 1`] = `
<div>
  <Script
    attributes={Object {}}
    onCreate={[Function]}
    onError={[Function]}
    onLoad={[Function]}
    url="https://www.google.com/recaptcha/api.js"
  />
  <CenteredLogo
    showAwsLogo={false}
  />
  <Panel
    accent={true}
    title="Sign Up"
  >
    <Panel.Section>
      <Connect(ReduxForm)
        onSubmit={[Function]}
      />
    </Panel.Section>
  </Panel>
  <Panel.Footer
    left={
      <small>
        Already have an account? 
        <UnstyledLink
          Component={[Function]}
          to="/auth"
        >
          Log In
        </UnstyledLink>
        .
      </small>
    }
    right={
      <JoinLink
        location={
          Object {
            "pathname": "/join",
          }
        }
      />
    }
  />
</div>
`;

exports[`JoinPage render renders errors 1`] = `
<div>
  <Script
    attributes={Object {}}
    onCreate={[Function]}
    onError={[Function]}
    onLoad={[Function]}
    url="https://www.google.com/recaptcha/api.js"
  />
  <CenteredLogo
    showAwsLogo={false}
  />
  <Panel
    accent={true}
    title="Sign Up"
  >
    <Panel.Section>
      <Error
        error={
          <JoinError
            data={Object {}}
            errors={Object {}}
          />
        }
      />
    </Panel.Section>
    <Panel.Section>
      <Connect(ReduxForm)
        onSubmit={[Function]}
      />
    </Panel.Section>
  </Panel>
  <Panel.Footer
    left={
      <small>
        Already have an account? 
        <UnstyledLink
          Component={[Function]}
          to="/auth"
        >
          Log In
        </UnstyledLink>
        .
      </small>
    }
    right={
      <JoinLink
        location={
          Object {
            "pathname": "/join",
          }
        }
      />
    }
  />
</div>
`;
